[project]
name = "python-reverberator"
version = "1.0.0"
description = "qm wanted to implement the Nepenthene reverb as a proof of concept"
authors = ["qm@z10.info"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=2.3.3",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
